fixing ordering problems and ordering problems in cottontail tests